--- a/Paragraph_LineBreak.html
+++ b/Paragraph_LineBreak.html
@@ -1,2 +1,12 @@
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa deleniti non recusandae! Iure dolore dignissimos, officia officiis sint voluptatibus temporibus accusamus facilis culpa, iste provident error soluta blanditiis vel? Nemo.</p>
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa deleniti non recusandae! Iure dolore dignissimos, officia officiis sint voluptatibus temporibus accusamus facilis culpa, iste provident error soluta <br/> Lorem ipsum dolor sit amet consectetur adipisicing <br/> elit. Culpa deleniti non recusandae! Iure dolore dignissimos, officia officiis sint voluptatibus temporibus accusamus facilis culpa, iste provident error soluta </p>
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Paragraph with Line Breaks</title>
+    </head>
+    <body>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa deleniti non recusandae! Iure dolore dignissimos, officia officiis sint voluptatibus temporibus accusamus facilis culpa, iste provident error soluta blanditiis vel? Nemo.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa deleniti non recusandae! Iure dolore dignissimos, officia officiis sint voluptatibus temporibus accusamus facilis culpa, iste provident error soluta <br/> Lorem ipsum dolor sit amet consectetur adipisicing <br/> elit. Culpa deleniti non recusandae! Iure dolore dignissimos, officia officiis sint voluptatibus temporibus accusamus facilis culpa, iste provident error soluta </p>
+    </body>
+</html>
