Update and rename Bold_Italic_Emprasize_Underline.html to Strong_Bold_Italic_Emprasize_Underline.html

--- a/Strong_Bold_Italic_Emprasize_Underline.html
+++ b/Strong_Bold_Italic_Emprasize_Underline.html
@@ -3,9 +3,10 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Bold, Italic, Emphasize, Underline</title>
+        <title>Strong, Bold, Italic, Emphasize, Underline</title>
     </head>
     <body>
+        <p>This is a <strong>Strong</strong> text.</p>
         <p>This is a <b>bold</b> text.</p>
         <p>This is an <i>italic</i> text.</p>
         <p>This is an <em>emphasized</em> text.</p>
